--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
     "vue": "^2.3.3"
   },
   "devDependencies": {
