--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
-    "vue": "^2.3.3"
+    "mint-ui": "^2.2.7",
+    "vue": "^2.3.3",
+    "vue-lazyload": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-component": "^0.10.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
